ELB-OneEC2-ALB-ExistingVPC-Subnets-SG-Success-v1.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation Sample Template ELBSample: Create a load balanced sample
  web site. The AMI is chosen based on the region in which the stack is run.
  This example creates 2 EC2 instances behind a load balancer with a simple
  health check. The instances may be created in one or more AZs. The web site is
  available on port 80, however, the instances can be configured to listen on
  any port (8888 by default). **WARNING** This template creates one or more
  Amazon EC2 instances and an Elastic Load Balancer. You will be billed for the
  AWS resources used if you create a stack from this template.
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.xlarge
      - m3.2xlarge
      - c1.medium
      - c1.xlarge
      - cc1.4xlarge
      - cc2.8xlarge
      - cg1.4xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  WebServerPort:
    Description: TCP/IP port of the web server
    Type: String
    Default: '80'
  MyKeyName:
    Description: >-
      Required- Name of an existing EC2 KeyPair to enable SSH access to the
      instances for Consul
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: KS-GroupAllKey
    ConstraintDescription: must be the Key Name of an existing KeyPair .
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  VPCID:
    Type: String
    Description: Optional - VPC Id of existing VPC. Leave blank to have a new VPC created
    Default: vpc-d78e0aaf
    ConstraintDescription: VPC ID must begin with 'vpc-' or leave blank to have a new VPC created
  SubnetId1DMZA:
    Type: String
    Description: >-
      Conditional- required if VpcId provided. Existing VPC Subnet Id 1 where
      EC2 instances will run
    Default: subnet-39abbd40
    ConstraintDescription: must be the Subnet Id of an existing Subnet .
  SubnetId2DMZB:
    Type: String
    Description: >-
      Conditional- required if VpcId provided. Existing VPC Subnet 2 Id where
      EC2 instances will run
    Default: subnet-c5c2f18e
    ConstraintDescription: must be the Subnet Id of an existing Subnet .
  SubnetId3DMZC:
    Type: String
    Description: >-
      Conditional- required if VpcId provided. Existing VPC Subnet Id 3 where
      EC2 instances will run
    Default: subnet-34f51569
    ConstraintDescription: must be the Subnet Id of an existing Subnet .
  MainSecurityGroupIds1:
    Type: String
    Description: >-
      Conditional- required if GENERIC security group provided. Existing
      GSecurity group Attaching
    Default: sg-04977b3b739224edc
    ConstraintDescription: must be the Security group Id of an existing SG .
Mappings:
  AWSInstanceType2Arch:
    t2.micro:
      Arch: '64'
    m1.small:
      Arch: '64'
    m1.medium:
      Arch: '64'
    m1.large:
      Arch: '64'
    m1.xlarge:
      Arch: '64'
    m2.xlarge:
      Arch: '64'
    m2.2xlarge:
      Arch: '64'
    m3.xlarge:
      Arch: '64'
    m3.2xlarge:
      Arch: '64'
    m2.4xlarge:
      Arch: '64'
    c1.medium:
      Arch: '64'
    c1.xlarge:
      Arch: '64'
  AWSRegionArch2AMI:
    us-east-1:
      '32': ami-aba768c2
      '64': ami-81a768e8
    us-west-1:
      '32': ami-45822300
      '64': ami-238ed2f4
    us-west-2:
      '32': ami-fcff72cc
      '64': ami-0bbc48cfd039413e3
    eu-west-1:
      '32': ami-018bb975
      '64': ami-998bb9ed
    sa-east-1:
      '32': ami-a039e6bd
      '64': ami-a239e6bf
    ap-southeast-1:
      '32': ami-425a2010
      '64': ami-5e5a200c
    ap-southeast-2:
      '32': ami-f98512c3
      '64': ami-43851279
    ap-northeast-1:
      '32': ami-7871c579
      '64': ami-7671c577
Resources:
  MyElasticLoadBalancerV2:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Subnets:
        - !Ref SubnetId1DMZA
        - !Ref SubnetId2DMZB
        - !Ref SubnetId3DMZC
      Scheme: internet-facing
      SecurityGroups:
        - !Ref MainSecurityGroupIds1
        - !Ref LoadBalancerSecurityGroup
  LoadBalancerListener1:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup1
      LoadBalancerArn: !Ref MyElasticLoadBalancerV2
      Port: 80
      Protocol: HTTP
  ALBTargetGroup1:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Join
        - '-'
        - - !Ref 'AWS::StackName'
          - ALBTargetGroup1
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      Targets:
        - Id:
            Ref: Ec2Instance1
          Port: 80
      VpcId: !Ref VPCID
  LoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable HTTP and HTTPS access on port 8443,8444,8500 and 8600'
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8500'
          ToPort: '8500'
          SourceSecurityGroupId: !Ref MainSecurityGroupIds1
        - IpProtocol: tcp
          FromPort: '8500'
          ToPort: '8500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8600'
          ToPort: '8600'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8500'
          ToPort: '8500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8600'
          ToPort: '8600'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8500'
          ToPort: '8500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8600'
          ToPort: '8600'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8600'
          ToPort: '8600'
          SourceSecurityGroupId: !Ref MainSecurityGroupIds1
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8443'
          ToPort: '8443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8443'
          ToPort: '8443'
          SourceSecurityGroupId: !Ref MainSecurityGroupIds1
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: '1'
          ToPort: '65535'
          CidrIp: 0.0.0.0/0
  Ec2Instance1:
    Type: 'AWS::EC2::Instance'
    Properties:
      SubnetId: !Ref SubnetId1DMZA
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      KeyName: !Ref MyKeyName
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - !FindInMap
          - AWSInstanceType2Arch
          - !Ref InstanceType
          - Arch
      UserData: !Base64
        Ref: WebServerPort
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access and HTTP access on the inbound port
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: !Ref WebServerPort
          ToPort: !Ref WebServerPort
          CidrIp: 0.0.0.0/0
Outputs:
  URL:
    Description: URL of the sample website
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt
          - MyElasticLoadBalancerV2
          - DNSName
